--- a/src/pages/admin/VehicleAdmin/Vehicle.css
+++ b/src/pages/admin/VehicleAdmin/Vehicle.css
@@ -1,3 +1,27 @@
 .alert-txt{
     color: red;
 }
+
+.btnSearch {
+    background: conic-gradient(from 208.67deg at 9.44% -12.5%, #3EFFC4 0deg, #C1FFEC 123.75deg, #2B4B43 234.38deg, #3EFFC4 360deg);
+    border: 3px solid rgba(0, 0, 0, 0.24);
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    box-sizing: border-box;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.crsthumimg {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+    border-radius: 20%;
+    border: 4px solid #fff;
+    box-shadow: 0 2px 6px #0003;
+}
