--- a/src/pages/client/HireVehicle/HireVehicle.css
+++ b/src/pages/client/HireVehicle/HireVehicle.css
@@ -1,3 +1,7 @@
+.body{
+    background-image: url("../../../assets/images/backGroundImage.png");
+}
+
 #cardview{
     padding: 5rem 1rem;
     --auto-grid-min-size: 16rem;
@@ -13,3 +17,4 @@
     margin-top: 30px;
 
 }
+
